# YNOGK-CXX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  pyproject.toml
example/: hotspot.py  projections.py  raylines.py  shadow.py  thindisk.py
include/ynogk_cxx/: particle.hxx
src/: coordinates.hxx  elliptic.cxx  impl.cxx  impl.hxx  particle.cxx  radius.cxx  radius.hxx  theta.cxx  theta.hxx  ynogk.pyx
src/elliptic/: cei2.c  cei2.h  elbd.c  elbd.h  elbdj2.c  elbdj2.h  elf.c  elf.h  elliptic.cxx
